Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106544

Antialiasing example doesn't animate when progressive AA is enabled

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.4.1, 6.5.0 Beta1
    • 6.x
    • Quick: 3D
    • None
    • Windows
    • 1ce4c0e911 (qt/qtquick3d/dev) 1ce4c0e911 (qt/tqtc-qtquick3d/dev) c9a93d90fc (qt/qtquick3d/6.4) c9a93d90fc (qt/tqtc-qtquick3d/6.4) c9a93d90fc (qt/qtquick3d/6.4.1) c9a93d90fc (qt/tqtc-qtquick3d/6.4.1)
    • 2022 Qt Quick 3D: Week 39-40

    Description

      When you open the antialiasing example, enable progressive AA and press animate nothing happens

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tuliniemi Jere Tuliniemi
            tuliniemi Jere Tuliniemi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes