Propagate node dirty flags for Progressive AA

Layer was never deemed dirty even if node transformations would
change causing new frames to be never renderered when Progressive
AA was enabled. A lancelot test for Progressive AA is added too.

Pick-to: 6.4
Fixes: QTBUG-106544
Change-Id: Ibaf8d8edd3643502afe7e041005b256eaf852546
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Christian Strømme <christian.stromme@qt.io>